--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Soins Agadir Center - Nursing & Wellness in Agadir | مركز العناية الصحية أكادير">
-  <title>Soins Agadir Center | مركز سوين أكادير</title>
+  <title data-lang="title">Soins Agadir Center | مركز سوين أكادير</title>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="icon" href="assets/img/agadir.jpg" type="image/jpeg">
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>Soins Agadir Center</h1>
+      <h1 data-lang="main-title">Soins Agadir Center</h1>
       <nav>
         <a href="index.html" data-lang="home">Home</a>
         <a href="about.html" data-lang="about">About</a>
@@ -27,37 +27,58 @@
   </header>
 
   <section class="hero">
-    <div class="container">
-      <img src="assets/img/hero.jpg" alt="Soins Agadir Center" class="hero-img">
-      <div class="hero-text">
-        <h2 data-lang="hero-title">Compassionate Care in Agadir</h2>
-        <p data-lang="hero-desc">Nursing & Wellness Center • 10+ Years Experience</p>
-        <a href="contact.html" class="btn" data-lang="book">Book Appointment</a>
-      </div>
+    <img src="assets/img/hero.jpg" alt="Soins Agadir Center Exterior" class="hero-img">
+    <div class="hero-overlay">
+      <h2 data-lang="hero-title">Compassionate Care in Agadir</h2>
+      <p data-lang="hero-desc">Dedicated nursing and wellness services with a personalized touch.</p>
     </div>
   </section>
 
-  <section class="info">
-    <div class="container">
-      <div class="info-item">
-        <h3>Location</h3>
-        <p data-lang="location">Agadir, Morocco<br>Near the beach</p>
-      </div>
-      <div class="info-item">
-        <h3>Hours</h3>
-        <p data-lang="hours">Mon–Fri: 8AM–6PM<br>Sat: 9AM–2PM</p>
-      </div>
-      <div class="info-item">
-        <h3>Phone</h3>
-        <p><a href="tel:+212123456789" data-lang="phone">+212 12 34 56 789</a></p>
-      </div>
-    </div>
-  </section>
+  <main class="container">
+    <section id="history">
+      <h2 data-lang="history-title">Our History</h2>
+      <p data-lang="history-desc">Established in Agadir, Soins Agadir Center has been providing quality care for over 10 years. Our continuum includes nursing, wellness, and specialized treatments.</p>
+      <ul data-lang="services-list">
+        <li data-lang="nursing">Nursing Care</li>
+        <li data-lang="aesthetics">Aesthetics & Wellness</li>
+        <li data-lang="home">Home Visits</li>
+        <li data-lang="vaccine">Vaccinations</li>
+      </ul>
+      <a href="services.html" class="btn" data-lang="view-services">View Classes and Events</a>
+      <img src="assets/img/agadir.jpg" alt="Agadir Wellness Area" class="section-img">
+    </section>
+
+    <section id="medical-center">
+      <h2 data-lang="center-title">Soins Agadir Center</h2>
+      <p data-lang="center-desc">Our main center offers advanced nursing and wellness services in a modern facility near the beach.</p>
+      <img src="assets/img/staff.jpg" alt="Aerial View of Agadir Area" class="section-img">
+    </section>
+
+    <section id="outpatient">
+      <h2 data-lang="outpatient-title">Outpatient Locations</h2>
+      <p data-lang="outpatient-desc">Convenient services including primary care, diagnostics, and treatments across Agadir.</p>
+    </section>
+
+    <section id="community">
+      <h2 data-lang="community-title">Community</h2>
+      <p data-lang="community-desc">We support health education, screenings, and wellness programs in partnership with local organizations.</p>
+    </section>
+
+    <section id="financial">
+      <h2 data-lang="financial-title">Financial Reporting</h2>
+      <p data-lang="financial-desc">Committed to transparency in our operations.</p>
+    </section>
+  </main>
 
   <footer>
-    <p>&copy; 2025 Soins Agadir Center. 
-      <a href="https://www.instagram.com/soins.agadir.center" target="_blank">Instagram</a>
-    </p>
+    <div class="container">
+      <h3 data-lang="follow">Follow Us</h3>
+      <a href="https://www.instagram.com/soins.agadir.center" target="_blank" data-lang="instagram">Instagram</a>
+      <hr>
+      <h3 data-lang="schedule">Schedule an Appointment</h3>
+      <p data-lang="schedule-desc">We can help you book or search our services.</p>
+      <a href="contact.html" class="btn" data-lang="book">Book Now</a>
+    </div>
   </footer>
 
   <script src="assets/js/main.js"></script>
