--- a/services.html
+++ b/services.html
@@ -3,37 +3,62 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title data-lang="services-title">Services</title>
+  <title data-lang="services-title">Services - Soins Agadir Center</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-  <header><!-- COPY --></header>
-
-  <section class="page">
+  <header>
     <div class="container">
+      <h1 data-lang="main-title">Soins Agadir Center</h1>
+      <nav>
+        <a href="index.html" data-lang="home">Home</a>
+        <a href="about.html" data-lang="about">About</a>
+        <a href="services.html" data-lang="services">Services</a>
+        <a href="contact.html" data-lang="contact">Contact</a>
+        <div class="lang-switch">
+          <button onclick="setLang('en')">EN</button>
+          <button onclick="setLang('fr')">FR</button>
+          <button onclick="setLang('ar')">العربية</button>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section id="services">
       <h2 data-lang="services-title">Our Services</h2>
       <div class="services-grid">
         <div class="service">
           <h3 data-lang="nursing">Nursing Care</h3>
-          <p data-lang="nursing-desc">Injections, dressings, post-op</p>
+          <p data-lang="nursing-desc">Injections, dressings, post-op follow-up, and general care.</p>
         </div>
         <div class="service">
           <h3 data-lang="aesthetics">Aesthetics & Wellness</h3>
-          <p data-lang="aesthetics-desc">Skin care, massages</p>
+          <p data-lang="aesthetics-desc">Skin care, therapeutic massages, and beauty treatments.</p>
         </div>
         <div class="service">
           <h3 data-lang="home">Home Visits</h3>
-          <p data-lang="home-desc">Mobile care in Agadir</p>
+          <p data-lang="home-desc">Mobile nursing care delivered to your home in Agadir.</p>
         </div>
         <div class="service">
           <h3 data-lang="vaccine">Vaccinations</h3>
-          <p data-lang="vaccine-desc">Routine vaccines</p>
+          <p data-lang="vaccine-desc">Flu, COVID, childhood, and travel vaccines.</p>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
-  <footer><!-- COPY --></footer>
+  <footer>
+    <div class="container">
+      <h3 data-lang="follow">Follow Us</h3>
+      <a href="https://www.instagram.com/soins.agadir.center" target="_blank" data-lang="instagram">Instagram</a>
+      <hr>
+      <h3 data-lang="schedule">Schedule an Appointment</h3>
+      <p data-lang="schedule-desc">We can help you book or search our services.</p>
+      <a href="contact.html" class="btn" data-lang="book">Book Now</a>
+    </div>
+  </footer>
+
   <script src="assets/js/main.js"></script>
 </body>
 </html>
