Update of layout and colors

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   </header>
 
   <main class="container">
-    <section id="about">
+    <section class="section">
       <h2 data-lang="about-title">About Us</h2>
       <p data-lang="about-desc">Soins Agadir Center is a dedicated nursing and wellness center in Agadir with over 10 years of experience. We provide personalized care backed by professional expertise.</p>
       <img src="assets/img/staff.jpg" alt="Our Team" class="section-img">
@@ -39,11 +39,11 @@
 
   <footer>
     <div class="container">
-      <h3 data-lang="follow">Follow Us</h3>
+      <h3 data-lang="follow">Follow us</h3>
       <a href="https://www.instagram.com/soins.agadir.center" target="_blank" data-lang="instagram">Instagram</a>
       <hr>
-      <h3 data-lang="schedule">Schedule an Appointment</h3>
-      <p data-lang="schedule-desc">We can help you book or search our services.</p>
+      <h3 data-lang="schedule">Schedule an appointment</h3>
+      <p data-lang="schedule-desc">We can help you schedule an appointment or you can search our directory of specialists.</p>
       <a href="contact.html" class="btn" data-lang="book">Book Now</a>
     </div>
   </footer>
