--- a/index.html
+++ b/index.html
@@ -26,57 +26,76 @@
     </div>
   </header>
 
+  <!-- HERO -->
   <section class="hero">
-    <img src="assets/img/hero.jpg" alt="Soins Agadir Center Exterior" class="hero-img">
-    <div class="hero-overlay">
-      <h2 data-lang="hero-title">Compassionate Care in Agadir</h2>
-      <p data-lang="hero-desc">Dedicated nursing and wellness services with a personalized touch.</p>
+    <img src="assets/img/hero.jpg" alt="Soins Agadir Center" class="hero-img">
+    <div class="hero-content">
+      <h2 data-lang="hero-title">Backed by expertise and delivered with a personalized touch</h2>
+      <p data-lang="hero-desc">Soins Agadir Center provides exceptional care—from primary services to advanced treatments—across Agadir.</p>
     </div>
   </section>
 
   <main class="container">
-    <section id="history">
-      <h2 data-lang="history-title">Our History</h2>
-      <p data-lang="history-desc">Established in Agadir, Soins Agadir Center has been providing quality care for over 10 years. Our continuum includes nursing, wellness, and specialized treatments.</p>
-      <ul data-lang="services-list">
-        <li data-lang="nursing">Nursing Care</li>
-        <li data-lang="aesthetics">Aesthetics & Wellness</li>
-        <li data-lang="home">Home Visits</li>
-        <li data-lang="vaccine">Vaccinations</li>
-      </ul>
-      <a href="services.html" class="btn" data-lang="view-services">View Classes and Events</a>
-      <img src="assets/img/agadir.jpg" alt="Agadir Wellness Area" class="section-img">
+    <!-- HISTORY -->
+    <section class="section">
+      <h2 data-lang="history-title">Our history</h2>
+      <p data-lang="history-desc">Our history began over 10 years ago in Agadir. Since then, we have grown to become a leading provider of comprehensive health-care services, offering advanced care while educating future nurses.</p>
+      <div class="grid">
+        <div class="grid-item">
+          <img src="assets/img/agadir.jpg" alt="Wellness area" class="grid-img">
+        </div>
+        <div class="grid-item">
+          <ul data-lang="services-list">
+            <li data-lang="nursing">Nursing Care</li>
+            <li data-lang="aesthetics">Aesthetics & Wellness</li>
+            <li data-lang="home">Home Visits</li>
+            <li data-lang="vaccine">Vaccinations</li>
+          </ul>
+          <a href="services.html" class="btn" data-lang="view-services">View classes and events</a>
+        </div>
+      </div>
     </section>
 
-    <section id="medical-center">
+    <!-- MEDICAL CENTER -->
+    <section class="section">
       <h2 data-lang="center-title">Soins Agadir Center</h2>
-      <p data-lang="center-desc">Our main center offers advanced nursing and wellness services in a modern facility near the beach.</p>
-      <img src="assets/img/staff.jpg" alt="Aerial View of Agadir Area" class="section-img">
+      <p data-lang="center-desc">Our main center combines advanced care with personalized service, state-of-the-art technology, and comprehensive health care for residents of Agadir.</p>
+      <div class="grid reverse">
+        <div class="grid-item">
+          <img src="assets/img/staff.jpg" alt="Aerial view" class="grid-img">
+        </div>
+        <div class="grid-item">
+          <p>Conveniently located near the beach.</p>
+        </div>
+      </div>
     </section>
 
-    <section id="outpatient">
-      <h2 data-lang="outpatient-title">Outpatient Locations</h2>
-      <p data-lang="outpatient-desc">Convenient services including primary care, diagnostics, and treatments across Agadir.</p>
+    <!-- OUTPATIENT -->
+    <section class="section">
+      <h2 data-lang="outpatient-title">Outpatient locations</h2>
+      <p data-lang="outpatient-desc">Our conveniently located outpatient centers offer a range of services, including primary and specialty care, diagnostic procedures, lab tests, and other treatments.</p>
     </section>
 
-    <section id="community">
+    <!-- COMMUNITY -->
+    <section class="section community">
       <h2 data-lang="community-title">Community</h2>
-      <p data-lang="community-desc">We support health education, screenings, and wellness programs in partnership with local organizations.</p>
+      <p data-lang="community-desc">Soins Agadir Center enhances community well-being through health education, screenings, and support, tailored to all ages and backgrounds.</p>
     </section>
 
-    <section id="financial">
-      <h2 data-lang="financial-title">Financial Reporting</h2>
-      <p data-lang="financial-desc">Committed to transparency in our operations.</p>
+    <!-- FINANCIAL -->
+    <section class="section">
+      <h2 data-lang="financial-title">Financial reporting</h2>
+      <p data-lang="financial-desc">Soins Agadir Center is committed to transparency through the public reporting of financial information.</p>
     </section>
   </main>
 
   <footer>
     <div class="container">
-      <h3 data-lang="follow">Follow Us</h3>
+      <h3 data-lang="follow">Follow us</h3>
       <a href="https://www.instagram.com/soins.agadir.center" target="_blank" data-lang="instagram">Instagram</a>
       <hr>
-      <h3 data-lang="schedule">Schedule an Appointment</h3>
-      <p data-lang="schedule-desc">We can help you book or search our services.</p>
+      <h3 data-lang="schedule">Schedule an appointment</h3>
+      <p data-lang="schedule-desc">We can help you schedule an appointment or you can search our directory of specialists.</p>
       <a href="contact.html" class="btn" data-lang="book">Book Now</a>
     </div>
   </footer>
