--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
   </header>
 
   <main class="container">
-    <section id="services">
+    <section class="section">
       <h2 data-lang="services-title">Our Services</h2>
       <div class="services-grid">
         <div class="service">
@@ -50,11 +50,11 @@
 
   <footer>
     <div class="container">
-      <h3 data-lang="follow">Follow Us</h3>
+      <h3 data-lang="follow">Follow us</h3>
       <a href="https://www.instagram.com/soins.agadir.center" target="_blank" data-lang="instagram">Instagram</a>
       <hr>
-      <h3 data-lang="schedule">Schedule an Appointment</h3>
-      <p data-lang="schedule-desc">We can help you book or search our services.</p>
+      <h3 data-lang="schedule">Schedule an appointment</h3>
+      <p data-lang="schedule-desc">We can help you schedule an appointment or you can search our directory of specialists.</p>
       <a href="contact.html" class="btn" data-lang="book">Book Now</a>
     </div>
   </footer>
